--- a/abc.html
+++ b/abc.html
@@ -8,6 +8,9 @@ Sample page for deployment
 			Hello Arun
 				<br>
 <font size=20>My first page to be deployed in Azure Cloud
+
+<img src="Arun.jpg" alt="my Photo">
+
 </font>
 
 		</body>
