--- a/abc.html
+++ b/abc.html
@@ -7,7 +7,8 @@ Sample page for deployment
 		<body>
 			Hello Arun
 				<br>
-<font size=20>My first page to be deployed in Azure Cloud
+<font size=20>My first page to be deployed in Azure Cloud</font>
+</br>
 
 <img src="Arun.jpg" alt="my Photo">
 
